--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.0"
+    "helmet": "^4.1.1",
+    "mongodb": "^3.6.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/mongodb": "^3.5.25",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
