--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,11 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "start": "node dist/index.js",
     "start:watch": "nodemon",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "tsc"
   },
   "nodemonConfig": {
     "ignore": [
@@ -40,5 +41,6 @@
     ],
     "exec": "yarn start",
     "ext": "ts"
-  }
+  },
+  "engines": { "node": "14.4.0" }
 }
