moves app into root directory

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "shortpants",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Zachary Arney <zachary.arney@gmail.com>",
