--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "start:watch": "nodemon",
+    "start": "node dist/index.js",
+    "server": "ts-node src/index.ts",
+    "server:watch": "nodemon",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "tsc && mv -i -v src/api/static dist/api/"
   },
   "nodemonConfig": {
     "ignore": [
